--- a/index.html
+++ b/index.html
@@ -14,11 +14,9 @@
             <li>they are cute</li>
             <li>great listeners</li>
         </ul>
-        <h6>top 3 most famous rabbits</h6>
+        <h6>What is the pythagorean therom?</h6>
         <ol>
-            <li>chungus</li>
-            <li>bugs bunny</li>
-            <li>Thumper</li>
+            <ul> The pythagorean therom was invented by a man named pythagorist.</ul>
         </ol>
     </body>
 </html>
