--- a/index.html
+++ b/index.html
@@ -11,12 +11,12 @@
     <body>
         <h1>How to do the pythagorean therom</h1> 
         <ul>
-            <li>they are cute</li>
-            <li>great listeners</li>
+            <li></li>
+            <li></li>
         </ul>
         <h6>What is the pythagorean therom?</h6>
         <ol>
-            <ul> The pythagorean therom was invented by a man named pythagorist.</ul>
+            <h18> The pythagorean therom was invented by a man named pythagorist.</h18>
         </ol>
     </body>
 </html>
