--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
             <li></li>
             <li></li>
         </ul>
-        <h6>What is the pythagorean therom?</h6>
+        <h2>What is the pythagorean therom?</h2>
         <ol>
-            <h18> The pythagorean therom was invented by a man named pythagorist.</h18>
+            <p> The pythagorean therom was invented by a man named pythagorist.</p>
         </ol>
     </body>
 </html>
