--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <ul>
             <li></li>
             <li></li>
-        </ul>
+        <img src="https://d2jmvrsizmvf4x.cloudfront.net/PUfbbGovTIG9obwelxUk_pythagoras-theorem.gif"
         <h2>What is the pythagorean therom?</h2>
         <ol>
             <p> The pythagorean therom was invented by a man named pythagorist.</p>
