--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <li></li>
             <li></li>
         <img src="https://d2jmvrsizmvf4x.cloudfront.net/PUfbbGovTIG9obwelxUk_pythagoras-theorem.gif"
-        <h2>What is the pythagorean therom?</h2>
+        >What is the pythagorean therom?</h2>
         <ol>
             <p> The pythagorean therom was invented by a man named pythagorist.</p>
         </ol>
