--- a/index.html
+++ b/index.html
@@ -13,10 +13,11 @@
         <ul>
             <li></li>
             <li></li>
-        <img src="https://d2jmvrsizmvf4x.cloudfront.net/PUfbbGovTIG9obwelxUk_pythagoras-theorem.gif"
-        >What is the pythagorean therom?</h2>
+        <h2></h2>What is the pythagorean therom?</h2>
         <ol>
             <p> The pythagorean therom was invented by a man named pythagorist.</p>
         </ol>
+        <p><img src="https://d2jmvrsizmvf4x.cloudfront.net/PUfbbGovTIG9obwelxUk_pythagoras-theorem.gif">
+        >
     </body>
 </html>
