--- a/index.html
+++ b/index.html
@@ -9,17 +9,27 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>How to do the pythagorean therom</h1> 
-        <ul>
-            <li></li>
-            <li></li>
-        </h2>What is the pythagorean therom?</h2>
-        <ol>
-            <p> 
+        <h1>How to do the pythagorean theorm and its history.</h1> 
+        <h2>By:Luka Felbapov</h2>
+            <br>
+            </h3>
+                <font size="5">
+                    The pythagorean therom was invented by a man named pythagoras
+                    back in 500 bce. it is used to tell the length of a right
+                    triangles hypothenuse by squaring side a (The triangles shortest side)
+                    and multiplying it by side b squared (side b is the triangles middle length side).
+                </font>
+                <iframe width="420" height="345" src="https://www.youtube.com/embed/">
+                </iframe>
                 
-                The pythagorean therom was invented by a man named pythagorist.</p>
-        </ol>
-        <p><img src="https://d2jmvrsizmvf4x.cloudfront.net/PUfbbGovTIG9obwelxUk_pythagoras-theorem.gif">
-        ></p>
+            <h3>
+            <ol>
+                <p>
+
+                </p>
+            </ol>
+            <p>
+                <img src="https://d2jmvrsizmvf4x.cloudfront.net/PUfbbGovTIG9obwelxUk_pythagoras-theorem.gif"/>
+            </p>
     </body>
 </html>
