--- a/index.html
+++ b/index.html
@@ -9,20 +9,26 @@
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
     </head>
     <body>
-        <h1>How to do the pythagorean theorm and its history.</h1> 
+        <h1>How to do the pythagorean theorem.</h1> 
         <h2>By:Luka Felbapov</h2>
             <br>
             </h3>
                 <font size="5">
-                    The pythagorean therom was invented by a man named pythagoras
+                    The pythagorean theorem was invented by a man named pythagoras
                     back in 500 bce. it is used to tell the length of a right
                     triangles hypothenuse by squaring side a (The triangles shortest side)
-                    and multiplying it by side b squared (side b is the triangles middle length side).
+                    and adding it to side b squared (side b is the triangles middle length side).
                 </font>
-                <iframe width="420" height="345" src="https://www.youtube.com/embed/">
-                </iframe>
-                
-            <h3>
+                <br>
+                <font size="5">
+                    the first step to doing the pythagorean theorem is to add a squared to b squared, 
+                    the sum of these two numbers is equal to c squared, finally you want to find the 
+                    square root of c squared. The square root of c squared is equal to c which is the 
+                    length of your right triangles hypothenuse. Congratulations! 
+                    You have sucessfully done the pythagorean theorem.
+                    
+                </font>
+                <h3>
             <ol>
                 <p>
 
@@ -31,5 +37,30 @@
             <p>
                 <img src="https://d2jmvrsizmvf4x.cloudfront.net/PUfbbGovTIG9obwelxUk_pythagoras-theorem.gif"/>
             </p>
+            <br>
+            <br>
+            <br>
+            <font size="6">
+                Index
+            </font>
+            <br>
+            <font size="3">To Square Something : If you square a number 
+            then you multiply that number by itself once such as 9*9 13*13
+            or 17*17
+            </font>  
+            <br>
+            <br>
+            <font size="3">Square Root : A numbers square root is a number that can be 
+                multiplied by itself to equal that number
+                such as the square root of 49 is 7 because 7 * 7 = 49 
+                or the square root of 36 is 6 because 6 * 6 = 36.
+            </font> 
+            <br>
+            <br>
+             <font size="3">   
+            Therom : In math a theorem is a statement which 
+            has been proven on the basis of 
+            previously proven statements.
+            </font>
     </body>
 </html>
